Web Resume with Image

--- a/block-BHaaai/index.html
+++ b/block-BHaaai/index.html
@@ -1,12 +1,52 @@
-<!-- 
-  ### Create a page according to the design shown below.
-
-  TODO:
-    - Open this image in a window for the design layout - (https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/introduction/assignment2.png)
-    - Use external stylesheet to style the page.
-    - For applying image use `<img src="" alt="">` tag. 
-      Keep source of the image inside `src=""` attribute. 
-      Put an alternative text of the image inside `alt=""` attribute. 
-      You can can also apply width and height to the image by applying `width="" and height=""` attribute inside image tag. for example - `<img src="suraj.jpg" alt="suraj" width="200" height="200">`
-    - For centering the element apply `text-align: center`, to the parent of the element in CSS. 
--->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Resume with Image</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+      <img src="ravi.jpg" alt=" ravi image" width="200px" height="200px">
+      <h1>Peter Mullins</h1>
+      <p>ravindrarajpoot9628172@gmail.com / Jhansi,Uttar Pradesh</p>
+    </header>
+    <section>
+      <h2>Experience</h2>
+      <h3>Senior Front End Developer</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quam fugit doloremque, numquam et sit!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, sint!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum unde ea, natus facilis hic sequi adipisci a rerum veniam.</p>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi distinctio recusandae, velit debitis eos quos?</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, fuga.</p>
+      <h3>Front End Developer</h3>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, quibusdam!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam laudantium, totam eius debitis similique corporis, voluptates repudiandae libero autem sequi natus minus vel omnis nihil!</p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, deleniti. Consequuntur laudantium a iste voluptatum!</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, doloremque.</p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, distinctio nisi! Delectus, ipsam?</p>
+      <h3>Front End Developer Intern</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, earum.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque officiis possimus a, fugiat consequuntur numquam aut adipisci voluptatibus. Quos natus autem asperiores cum, rerum quas.</p>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab, quaerat.</p>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error, cupiditate!</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure eos repellendus unde nemo.</p>
+    </section>
+    <section>
+      <h2>Skills</h2>
+      <p>HTMl</p>
+      <p>CSS</p>
+      <p>React</p>
+      <p>JavaScript</p>
+      <p>Photoshop</p>
+      <p>Illustrator</p>
+    </section>
+    <footer>
+      <a href="#">Twitter</a>
+      <a href="#">Linkedin</a>
+      <a href="#">Instagram</a>
+      <a href="#">Facebook</a>
+    </footer>
+  </body>
+</html>
