add pic in resume

--- a/block-BHaaai/index.html
+++ b/block-BHaaai/index.html
@@ -23,7 +23,7 @@
       <h3>Front End Developer</h3>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, quibusdam!</p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam laudantium, totam eius debitis similique corporis, voluptates repudiandae libero autem sequi natus minus vel omnis nihil!</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, deleniti. Consequuntur laudantium a iste voluptatum!</p>
+      <p>Lorem, ipsum dolor  amet consectetur adipisicing elit. Exercitationem, deleniti. Consequuntur laudantium a iste voluptatum!</p>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex, doloremque.</p>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, distinctio nisi! Delectus, ipsam?</p>
       <h3>Front End Developer Intern</h3>
