--- a/block-BHaaac/index.html
+++ b/block-BHaaac/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
-</head>
-
-<body>
-    <h1>Hello World!</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab voluptas tempore quia sunt dicta alias unde
-        recusandae officiis veniam vero quis sint ducimus porro quos perferendis praesentium, cum voluptatem quibusdam
-        omnis, voluptatum et culpa temporibus. Blanditiis dolor in sequi laboriosam modi praesentium placeat fuga.
-        Temporibus, saepe repellat minima porro iusto incidunt quo sed ea cum nam exercitationem tempora, labore
-        perferendis facere cupiditate laborum harum? Delectus laboriosam et facere, nisi earum harum enim animi
-        voluptatibus ipsam commodi quisquam consectetur ullam expedita dolor velit laborum illum dolorum praesentium
-        natus eveniet! Ipsa molestias aperiam ut odio perferendis sunt alias eaque, veritatis suscipit soluta!
-    </p>
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hello World</title>
+    </head>
+    <body>
+        <h1>Hello World!</h1>
+        <p> 
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab voluptas tempore quia sunt dicta alias unde
+            recusandae officiis veniam vero quis sint ducimus porro quos perferendis praesentium, cum voluptatem quibusdam
+            omnis, voluptatum et culpa temporibus. Blanditiis dolor in sequi laboriosam modi praesentium placeat fuga.
+            Temporibus, saepe repellat minima porro iusto incidunt quo sed ea cum nam exercitationem tempora, labore
+            perferendis facere cupiditate laborum harum? Delectus laboriosam et facere, nisi earum harum enim animi
+            voluptatibus ipsam commodi quisquam consectetur ullam expedita dolor velit laborum illum dolorum praesentium
+            natus eveniet! Ipsa molestias aperiam ut odio perferendis sunt alias eaque, veritatis suscipit soluta!
+        </p>
+    </body>
 </html>
