--- a/block-BHaaaf/index.html
+++ b/block-BHaaaf/index.html
@@ -1,23 +1,15 @@
-<!-- 
-  ### Create a simple page with an external stylesheet.
-
-  TODO:
-    - Create a simple page `(index.html)` with one heading following with a long paragraph.
-    - Create an external stylesheet `(style.css)` and change the color and font size of the heading and paragraph.
-    - Also, change the background color of the body.
-    - Use different selectors to select different elements.
--->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Hello World!</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1 class="heading">Hello World!</h1>
-    <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate accusamus laborum quis dolorem
+    <p class="content">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate accusamus laborum quis dolorem
       at veniam unde vitae, temporibus aut eaque perferendis eveniet eum perspiciatis magnam distinctio expedita assumenda
       tempora nisi. Ad, nisi. Facere ad, hic distinctio incidunt natus molestias dolores voluptas accusamus ducimus, cum
       reprehenderit odio voluptate perferendis quas, facilis in! Voluptatibus, mollitia vero? Dolor quaerat id iste ex,
